fix image alignment

--- a/packages/bui-docs/src/components/landing/getStarted/GetStarted.scss
+++ b/packages/bui-docs/src/components/landing/getStarted/GetStarted.scss
@@ -16,6 +16,10 @@
     z-index: 2;
     .button {
       margin-top: 60px;
+
+      @media screen and (max-width: 768px) {
+        margin-top: 160px;
+      }
     }
   }
   .rightSection {
@@ -36,7 +40,7 @@
       transform: translateX(20%);
       @media screen and (max-width: 768px) {
         transform: translateX(5%);
-      
+
         width: 140%;
         height: 140%;
       }
@@ -45,7 +49,6 @@
         width: 160%;
         height: 160%;
       }
-     
     }
     @media screen and (max-width: 441px) {
       margin-bottom: 60px;
@@ -56,8 +59,6 @@
       margin-bottom: 60px;
       margin-top: 40px;
     }
-  
-   
   }
 
   .description {
@@ -82,6 +83,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
 }
 
